examples/graphql_benfy_parser.ts
export type LogValue = { debugName: string; rgx: string; status: string; index: number; location: string; text: string };
const successValues: LogValue[] = [];
const failedValues: LogValue[] = [];
export const logs: LogValue[] = [];
let index = 0;
let text = "";
let debugName = "";
let path = "";
const indexToLineCol = (textIndex: number) => {
	const lineBreakBefore = textIndex === 0 ? -1 : text.lastIndexOf("\n", textIndex - 1);
	return {
		line: lineBreakBefore === -1 ? 1 : text.slice(0, lineBreakBefore + 1).match(/\n/g)!.length + 1,
		col: textIndex - lineBreakBefore,
	};
};
const try_parse_fn = <T extends any[]>(parse_fn: (...args: T) => void | boolean | string, ...args: T) => {
	const current_index = index;
	try {
		if (parse_fn(...args) === false) return "stop";
		return true;
	} catch {
		index = current_index;
		return false;
	}
};
const parse_array_fn = <T>(
	parse_fn: (arg: T) => void,
	arg: T[],
	create_fn: () => T,
	min: number,
	max = Number.MAX_SAFE_INTEGER
) => {
	let obj = create_fn();
	for (let i = 0; i < min; i++) {
		parse_fn(obj);
		arg.push(obj);
		obj = create_fn();
	}
	for (let i = min; i < max && try_parse_fn(parse_fn, obj) !== false; i++) {
		arg.push(obj);
		obj = create_fn();
	}
};
const fail_parse = (message: string) => {
	throw new Error(message);
};
const reg = (strings: TemplateStringsArray, ...keys: RegExp[]) => {
	const result = [strings.raw[0]];
	for (let i = 0; i < keys.length; i++) result.push(keys[i].source, strings.raw[i + 1]);
	return new RegExp(result.join("").slice(1, -1));
};
const parse_regex = (rgx: RegExp, skipSpace: boolean, ignoreCase: boolean, multiline: boolean) => {
	const flags = "gy" + (ignoreCase ? "i" : "") + (multiline ? "m" : "");
	if (skipSpace) {
		const spaceRegex = /\s*/gy;
		spaceRegex.lastIndex = index;
		const matches = spaceRegex.exec(text);
		if (matches) index = matches.index + matches[0].length;
	}
	const newRgx = new RegExp(rgx.source, flags);
	newRgx.lastIndex = index;
	const matches = newRgx.exec(text);
	if (!matches) {
		const { line, col } = indexToLineCol(index);
		failedValues.push({
			debugName: debugName,
			rgx: rgx.source,
			status: "false",
			index: index,
			location: `${path ? `${path}:` : ""}${line}:${col}`,
			text: text
				.slice(index, index + 25)
				.replace(/\r?\n/g, "\\n")
				.replace(/\t/g, "\\t")
				.replace(/^(\\t|\\n)*/g, ""),
		});
		throw new Error(`Match failed: ${rgx.source}`);
	}
	if (matches) {
		index = matches.index + matches[0].length;
		failedValues.length = 0;
		const { line, col } = indexToLineCol(index);
		successValues.push({
			debugName: debugName,
			rgx: rgx.source,
			status: "true",
			index: index,
			location: `${path ? `${path}:` : ""}${line}:${col}`,
			text: text
				.slice(index, index + 25)
				.replace(/\r?\n/g, "\\n")
				.replace(/\t/g, "\\t")
				.replace(/^(\\t|\\n)*/g, ""),
		});
	}
	return matches[0];
};

export type Document = {
	type: "Document";
	Ignored: Ignored;
	Definition: Definition[];
	_Ignored_1: Ignored;
};
export type SourceCharacter = {
	type: "SourceCharacter";
	value: string;
};
export type Ignored = {
	type: "Ignored";
	value: UnicodeBOM | WhiteSpace | LineTerminator | Comment | Comma;
};
export type UnicodeBOM = {
	type: "UnicodeBOM";
	value: string;
};
export type WhiteSpace = {
	type: "WhiteSpace";
	value: string;
};
export type LineTerminator = {
	type: "LineTerminator";
	value: string;
};
export type Comment = {
	type: "Comment";
	CommentChar: CommentChar[];
};
export type CommentChar = {
	type: "CommentChar";
	SourceCharacter: SourceCharacter;
};
export type Comma = {
	type: "Comma";
	value: string;
};
export type Token = {
	type: "Token";
	value: Punctuator | Name | IntValue | FloatValue | StringValue;
};
export type Punctuator = {
	type: "Punctuator";
	value: string;
};
export type Name = {
	type: "Name";
	value: string;
};
export type IntValue = {
	type: "IntValue";
	IntegerPart: IntegerPart;
};
export type IntegerPart = {
	type: "IntegerPart";
	value: IntegerPart_0 | IntegerPart_1;
};
export type IntegerPart_0 = {
	type: "IntegerPart_0";
	NegativeSign?: NegativeSign;
	Ignored: Ignored;
	_Ignored_1: Ignored;
};
export type IntegerPart_1 = {
	type: "IntegerPart_1";
	NegativeSign?: NegativeSign;
	Ignored: Ignored;
	NonZeroDigit: NonZeroDigit;
	_Ignored_1: Ignored;
	Digit: Digit[];
	_Ignored_2: Ignored;
};
export type NegativeSign = {
	type: "NegativeSign";
	value: string;
};
export type Digit = {
	type: "Digit";
	value: string;
};
export type NonZeroDigit = {
	type: "NonZeroDigit";
	Digit: Digit;
};
export type FloatValue = {
	type: "FloatValue";
	value: FloatValue_0 | FloatValue_1 | FloatValue_2;
};
export type FloatValue_0 = {
	type: "FloatValue_0";
	IntegerPart: IntegerPart;
	FractionalPart: FractionalPart;
};
export type FloatValue_1 = {
	type: "FloatValue_1";
	IntegerPart: IntegerPart;
	ExponentPart: ExponentPart;
};
export type FloatValue_2 = {
	type: "FloatValue_2";
	IntegerPart: IntegerPart;
	FractionalPart: FractionalPart;
	ExponentPart: ExponentPart;
};
export type FractionalPart = {
	type: "FractionalPart";
	Digit: Digit[];
};
export type ExponentPart = {
	type: "ExponentPart";
	ExponentIndicator: ExponentIndicator;
	Sign?: Sign;
	Digit: Digit[];
};
export type ExponentIndicator = {
	type: "ExponentIndicator";
	value: string;
};
export type Sign = {
	type: "Sign";
	value: string;
};
export type StringValue = {
	type: "StringValue";
	value: StringValue_0 | StringValue_1 | StringValue_2 | StringValue_3;
};
export type StringValue_0 = {
	type: "StringValue_0";
	value: string;
};
export type StringValue_1 = {
	type: "StringValue_1";
	value: string;
};
export type StringValue_2 = {
	type: "StringValue_2";
	StringCharacter: StringCharacter[];
};
export type StringValue_3 = {
	type: "StringValue_3";
	BlockStringCharacter: BlockStringCharacter[];
};
export type StringCharacter = {
	type: "StringCharacter";
	value: StringCharacter_0 | StringCharacter_1 | StringCharacter_2 | StringCharacter_3 | StringCharacter_4;
};
export type StringCharacter_0 = {
	type: "StringCharacter_0";
	SourceCharacter: SourceCharacter;
};
export type StringCharacter_1 = {
	type: "StringCharacter_1";
	SourceCharacter: SourceCharacter;
};
export type StringCharacter_2 = {
	type: "StringCharacter_2";
	SourceCharacter: SourceCharacter;
};
export type StringCharacter_3 = {
	type: "StringCharacter_3";
	EscapedUnicode: EscapedUnicode;
};
export type StringCharacter_4 = {
	type: "StringCharacter_4";
	EscapedCharacter: EscapedCharacter;
};
export type EscapedUnicode = {
	type: "EscapedUnicode";
	value: string;
};
export type EscapedCharacter = {
	type: "EscapedCharacter";
	value: string;
};
export type BlockStringCharacter = {
	type: "BlockStringCharacter";
	value: BlockStringCharacter_0 | BlockStringCharacter_1 | BlockStringCharacter_2;
};
export type BlockStringCharacter_0 = {
	type: "BlockStringCharacter_0";
	SourceCharacter: SourceCharacter;
};
export type BlockStringCharacter_1 = {
	type: "BlockStringCharacter_1";
	SourceCharacter: SourceCharacter;
};
export type BlockStringCharacter_2 = {
	type: "BlockStringCharacter_2";
	value: string;
};
export type Definition = {
	type: "Definition";
	value: ExecutableDefinition | TypeSystemDefinition | TypeSystemExtension;
};
export type ExecutableDefinition = {
	type: "ExecutableDefinition";
	value: OperationDefinition | FragmentDefinition;
};
export type OperationDefinition = {
	type: "OperationDefinition";
	value: OperationDefinition_0 | OperationDefinition_1;
};
export type OperationDefinition_0 = {
	type: "OperationDefinition_0";
	SelectionSet: SelectionSet;
	Ignored: Ignored;
};
export type OperationDefinition_1 = {
	type: "OperationDefinition_1";
	Ignored: Ignored;
	OperationType: OperationType;
	_Ignored_1: Ignored;
	Name?: Name;
	_Ignored_2: Ignored;
	VariableDefinitions?: VariableDefinitions;
	_Ignored_3: Ignored;
	Directives?: Directives;
	SelectionSet: SelectionSet;
	_Ignored_4: Ignored;
};
export type OperationType = {
	type: "OperationType";
	value: string;
};
export type SelectionSet = {
	type: "SelectionSet";
	Ignored: Ignored;
	Selection: Selection[];
	_Ignored_1: Ignored;
	_Ignored_2: Ignored;
};
export type Selection = {
	type: "Selection";
	value: Selection_0 | Selection_1 | Selection_2;
};
export type Selection_0 = {
	type: "Selection_0";
	Field: Field;
	Ignored: Ignored;
};
export type Selection_1 = {
	type: "Selection_1";
	FragmentSpread: FragmentSpread;
	Ignored: Ignored;
};
export type Selection_2 = {
	type: "Selection_2";
	InlineFragment: InlineFragment;
	Ignored: Ignored;
};
export type Field = {
	type: "Field";
	Alias?: Alias;
	Ignored: Ignored;
	Name: Name;
	_Ignored_1: Ignored;
	Arguments?: Arguments;
	_Ignored_2: Ignored;
	Directives?: Directives;
	_Ignored_3: Ignored;
	SelectionSet?: SelectionSet;
	_Ignored_4: Ignored;
};
export type Alias = {
	type: "Alias";
	Name: Name;
	Ignored: Ignored;
	_Ignored_1: Ignored;
};
export type Arguments = {
	type: "Arguments";
	Ignored: Ignored;
	Argument: Argument[];
	_Ignored_1: Ignored;
	_Ignored_2: Ignored;
};
export type Argument = {
	type: "Argument";
	Name: Name;
	Ignored: Ignored;
	_Ignored_1: Ignored;
	Value: Value;
	_Ignored_2: Ignored;
};
export type FragmentSpread = {
	type: "FragmentSpread";
	Ignored: Ignored;
	FragmentName: FragmentName;
	_Ignored_1: Ignored;
	Directives?: Directives;
	_Ignored_2: Ignored;
};
export type InlineFragment = {
	type: "InlineFragment";
	Ignored: Ignored;
	TypeCondition?: TypeCondition;
	_Ignored_1: Ignored;
	Directives?: Directives;
	_Ignored_2: Ignored;
	SelectionSet: SelectionSet;
	_Ignored_3: Ignored;
};
export type FragmentDefinition = {
	type: "FragmentDefinition";
	Ignored: Ignored;
	FragmentName: FragmentName;
	_Ignored_1: Ignored;
	TypeCondition: TypeCondition;
	_Ignored_2: Ignored;
	Directives?: Directives;
	_Ignored_3: Ignored;
	SelectionSet: SelectionSet;
	_Ignored_4: Ignored;
};
export type FragmentName = {
	type: "FragmentName";
	Name: Name;
};
export type TypeCondition = {
	type: "TypeCondition";
	Ignored: Ignored;
	NamedType: NamedType;
	_Ignored_1: Ignored;
};
export type Value = {
	type: "Value";
	value: Variable | IntValue | FloatValue | StringValue | BooleanValue | NullValue | EnumValue | ListValue | ObjectValue;
};
export type BooleanValue = {
	type: "BooleanValue";
	value: string;
};
export type NullValue = {
	type: "NullValue";
	value: string;
};
export type EnumValue = {
	type: "EnumValue";
	value: EnumValue_0 | EnumValue_1 | EnumValue_2;
};
export type EnumValue_0 = {
	type: "EnumValue_0";
	Name: Name;
};
export type EnumValue_1 = {
	type: "EnumValue_1";
	Name: Name;
};
export type EnumValue_2 = {
	type: "EnumValue_2";
	Name: Name;
};
export type ListValue = {
	type: "ListValue";
	value: ListValue_0 | ListValue_1;
};
export type ListValue_0 = {
	type: "ListValue_0";
	value: string;
};
export type ListValue_1 = {
	type: "ListValue_1";
	Value: Value[];
};
export type ObjectValue = {
	type: "ObjectValue";
	value: ObjectValue_0 | ObjectValue_1;
};
export type ObjectValue_0 = {
	type: "ObjectValue_0";
	value: string;
};
export type ObjectValue_1 = {
	type: "ObjectValue_1";
	ObjectField: ObjectField[];
};
export type ObjectField = {
	type: "ObjectField";
	Ignored: Ignored;
	Name: Name;
	_Ignored_1: Ignored;
	_Ignored_2: Ignored;
	Value: Value;
	_Ignored_3: Ignored;
};
export type VariableDefinitions = {
	type: "VariableDefinitions";
	VariableDefinition: VariableDefinition[];
};
export type VariableDefinition = {
	type: "VariableDefinition";
	Variable: Variable;
	Ignored: Ignored;
	_Ignored_1: Ignored;
	Type: Type;
	_Ignored_2: Ignored;
	DefaultValue?: DefaultValue;
	_Ignored_3: Ignored;
};
export type Variable = {
	type: "Variable";
	Name: Name;
};
export type DefaultValue = {
	type: "DefaultValue";
	Ignored: Ignored;
	Value: Value;
};
export type Type = {
	type: "Type";
	value: NamedType | ListType | NonNullType;
};
export type NamedType = {
	type: "NamedType";
	Name: Name;
};
export type ListType = {
	type: "ListType";
	Type: Type;
};
export type NonNullType = {
	type: "NonNullType";
	value: NonNullType_0 | NonNullType_1;
};
export type NonNullType_0 = {
	type: "NonNullType_0";
	NamedType: NamedType;
};
export type NonNullType_1 = {
	type: "NonNullType_1";
	ListType: ListType;
};
export type Directives = {
	type: "Directives";
	Directive: Directive[];
};
export type Directive = {
	type: "Directive";
	Ignored: Ignored;
	Name: Name;
	_Ignored_1: Ignored;
	Arguments?: Arguments;
	_Ignored_2: Ignored;
};
export type TypeSystemDefinition = {
	type: "TypeSystemDefinition";
	value: SchemaDefinition | TypeDefinition | DirectiveDefinition;
};
export type TypeSystemExtension = {
	type: "TypeSystemExtension";
	value: SchemaExtension | TypeExtension;
};
export type SchemaDefinition = {
	type: "SchemaDefinition";
	Ignored: Ignored;
	Directives?: Directives;
	_Ignored_1: Ignored;
	_Ignored_2: Ignored;
	OperationTypeDefinition: OperationTypeDefinition[];
	_Ignored_3: Ignored;
	_Ignored_4: Ignored;
};
export type SchemaExtension = {
	type: "SchemaExtension";
	value: SchemaExtension_0 | SchemaExtension_1;
};
export type SchemaExtension_0 = {
	type: "SchemaExtension_0";
	Ignored: Ignored;
	Directives?: Directives;
	_Ignored_1: Ignored;
	_Ignored_2: Ignored;
	OperationTypeDefinition: OperationTypeDefinition[];
	_Ignored_3: Ignored;
	_Ignored_4: Ignored;
};
export type SchemaExtension_1 = {
	type: "SchemaExtension_1";
	Ignored: Ignored;
	Directives: Directives;
	_Ignored_1: Ignored;
};
export type OperationTypeDefinition = {
	type: "OperationTypeDefinition";
	OperationType: OperationType;
	Ignored: Ignored;
	_Ignored_1: Ignored;
	NamedType: NamedType;
	_Ignored_2: Ignored;
};
export type Description = {
	type: "Description";
	StringValue: StringValue;
};
export type TypeDefinition = {
	type: "TypeDefinition";
	value:
		| ScalarTypeDefinition
		| ObjectTypeDefinition
		| InterfaceTypeDefinition
		| UnionTypeDefinition
		| EnumTypeDefinition
		| InputObjectTypeDefinition;
};
export type TypeExtension = {
	type: "TypeExtension";
	value:
		| ScalarTypeExtension
		| ObjectTypeExtension
		| InterfaceTypeExtension
		| UnionTypeExtension
		| EnumTypeExtension
		| InputObjectTypeExtension;
};
export type ScalarTypeDefinition = {
	type: "ScalarTypeDefinition";
	Description?: Description;
	Ignored: Ignored;
	_Ignored_1: Ignored;
	Name: Name;
	_Ignored_2: Ignored;
	Directives?: Directives;
	_Ignored_3: Ignored;
};
export type ScalarTypeExtension = {
	type: "ScalarTypeExtension";
	Ignored: Ignored;
	_Ignored_1: Ignored;
	Name: Name;
	_Ignored_2: Ignored;
	Directives: Directives;
	_Ignored_3: Ignored;
};
export type ObjectTypeDefinition = {
	type: "ObjectTypeDefinition";
	Description?: Description;
	Ignored: Ignored;
	_Ignored_1: Ignored;
	Name: Name;
	_Ignored_2: Ignored;
	ImplementsInterfaces?: ImplementsInterfaces;
	_Ignored_3: Ignored;
	Directives?: Directives;
	_Ignored_4: Ignored;
	FieldsDefinition?: FieldsDefinition;
	_Ignored_5: Ignored;
};
export type ObjectTypeExtension = {
	type: "ObjectTypeExtension";
	value: ObjectTypeExtension_0 | ObjectTypeExtension_1 | ObjectTypeExtension_2;
};
export type ObjectTypeExtension_0 = {
	type: "ObjectTypeExtension_0";
	Ignored: Ignored;
	_Ignored_1: Ignored;
	Name: Name;
	_Ignored_2: Ignored;
	ImplementsInterfaces?: ImplementsInterfaces;
	_Ignored_3: Ignored;
	Directives?: Directives;
	_Ignored_4: Ignored;
	FieldsDefinition: FieldsDefinition;
	_Ignored_5: Ignored;
};
export type ObjectTypeExtension_1 = {
	type: "ObjectTypeExtension_1";
	Ignored: Ignored;
	_Ignored_1: Ignored;
	Name: Name;
	_Ignored_2: Ignored;
	ImplementsInterfaces?: ImplementsInterfaces;
	_Ignored_3: Ignored;
	Directives: Directives;
	_Ignored_4: Ignored;
};
export type ObjectTypeExtension_2 = {
	type: "ObjectTypeExtension_2";
	Ignored: Ignored;
	_Ignored_1: Ignored;
	Name: Name;
	_Ignored_2: Ignored;
	ImplementsInterfaces: ImplementsInterfaces;
	_Ignored_3: Ignored;
};
export type ImplementsInterfaces = {
	type: "ImplementsInterfaces";
	value: ImplementsInterfaces_0 | ImplementsInterfaces_1;
};
export type ImplementsInterfaces_0 = {
	type: "ImplementsInterfaces_0";
	Ignored: Ignored;
	_Ignored_1: Ignored;
	NamedType: NamedType;
	_Ignored_2: Ignored;
};
export type ImplementsInterfaces_1 = {
	type: "ImplementsInterfaces_1";
	ImplementsInterfaces: ImplementsInterfaces;
	Ignored: Ignored;
	_Ignored_1: Ignored;
	NamedType: NamedType;
	_Ignored_2: Ignored;
};
export type InterfaceTypeDefinition = {
	type: "InterfaceTypeDefinition";
	Description?: Description;
	Ignored: Ignored;
	_Ignored_1: Ignored;
	Name: Name;
	_Ignored_2: Ignored;
	Directives?: Directives;
	_Ignored_3: Ignored;
	FieldsDefinition?: FieldsDefinition;
	_Ignored_4: Ignored;
};
export type InterfaceTypeExtension = {
	type: "InterfaceTypeExtension";
	value: InterfaceTypeExtension_0 | InterfaceTypeExtension_1;
};
export type InterfaceTypeExtension_0 = {
	type: "InterfaceTypeExtension_0";
	Ignored: Ignored;
	_Ignored_1: Ignored;
	Name: Name;
	_Ignored_2: Ignored;
	Directives?: Directives;
	_Ignored_3: Ignored;
	FieldsDefinition: FieldsDefinition;
	_Ignored_4: Ignored;
};
export type InterfaceTypeExtension_1 = {
	type: "InterfaceTypeExtension_1";
	Ignored: Ignored;
	_Ignored_1: Ignored;
	Name: Name;
	_Ignored_2: Ignored;
	Directives: Directives;
	_Ignored_3: Ignored;
};
export type UnionTypeDefinition = {
	type: "UnionTypeDefinition";
	Description?: Description;
	Ignored: Ignored;
	_Ignored_1: Ignored;
	Name: Name;
	_Ignored_2: Ignored;
